--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,67 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
+*.so.*
 *.dylib
 
 # Test binary, built with `go test -c`
 *.test
 
-# Code coverage profiles and other test artifacts
+# Output of the go coverage tool
 *.out
-coverage.*
 *.coverprofile
+coverage.*
 profile.cov
+*.prof
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
+# Dependency directories
+vendor/
 go.work
 go.work.sum
 
-# env file
+# Environment variables
 .env
+.env.local
+.env.*.local
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# IDE and Editor
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+*.iml
+
+# Build output
+/analyzer
+/analyzer-*
+*.tar.gz
+dist/
+build/
+
+# Logs
+*.log
+logs/
+signals.log
+
+# Docker
+.dockerignore
+
+# OS specific
+Thumbs.db
+.AppleDouble
+.LSOverride
+
+# Project specific
+signals.log
+cpu.prof
+mem.prof
+*.test
+
+# Temporary files
+tmp/
+temp/
+*.tmp
